19_Ingress/19-05_Ingress/web08-proj.yaml
# Exercise 19-04 v1.0.0
#
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web08-deploy
  namespace: prdstore-ns
  labels:
    app: store-app 
    tier: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      pod: web08-pod
  template:
    metadata:
      labels:
        pod: web08-pod
    spec:
      containers:
        - name: web-app
          image: parthcldr/cloudera-ingress-example-image
          ports:
            - name: http 
              containerPort: 80
              protocol: TCP
          resources: {}
---
kind: Service
apiVersion: v1
metadata:
  name: web08-svc
  namespace: prdstore-ns
spec:
  selector:
    pod: web08-pod 
  ports:
  # Default port used by the image
  - port: 80
    targetPort: 80
