19_Ingress/19-05_Ingress/prdstore-ing.yaml
# Exercise 19-05 v1.0.0
#
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prdstore-ing 
  namespace: prdstore-ns
spec:
  rules:
    - host: edu.example
      http:
        paths:
          - pathType: Prefix
            path: /store
            backend:
              service:
                name: store08-svc 
                port:
                  number: 80
          - pathType: Prefix
            path: /web
            backend:
             service:
               name: web08-svc 
               port:
                 number: 80
